--- a/index.html
+++ b/index.html
@@ -43,14 +43,8 @@
 	</body>
 
 	<!-- Vendors -->
-	<!-- build:nonangularlibs js/nonangularlibs.js -->
-	<script type="text/javascript" src="js/nonangular/jquery-1.11.2.min.js"></script>
-	<!-- endbuild -->
-
-	<!-- Non-angular libraries -->
 	<!-- build:libs js/libs.js -->
-	<script type="text/javascript" src="js/nonangular/lodash.min.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
 	<!-- endbuild -->
 
 	<!-- Angular external libraries for application -->
@@ -58,6 +52,7 @@
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+	<script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
 	<!-- endbuild -->
 
 	<!-- Angular components -->
