--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<head>
 
-		<base href="/">
+		<script>document.write('<base href="' + document.location + '" />');</script>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>Concentration game with AngularJS</title>
