--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-csp="" ng-app="concentrationGame"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-csp="" ng-app="concentrationGameApp"> <!--<![endif]-->
 
 	<head>
 
@@ -59,14 +59,11 @@
 	<!-- build:appcomponents js/appcomponents.js -->
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/config.js"></script>
-	<script type="text/javascript" src="app/components/services/LocalStorage.service.js"></script>
-	<script type="text/javascript" src="app/components/services/queryService.service.js"></script>
-	<script type="text/javascript" src="app/components/directives/responsive.nav.directive.js"></script>
+	<script type="text/javascript" src="app/components/services/concentrationGame.service.js"></script>
 	<!-- endbuild -->
 
 	<!-- Application sections -->
 	<!-- build:mainapp js/mainapp.js -->
-	<script type="text/javascript" src="app/factory.js"></script>
 	<script type="text/javascript" src="app/controllers/SetupController.js"></script>
 	<script type="text/javascript" src="app/controllers/PlayController.js"></script>
 	<script type="text/javascript" src="app/controllers/ResultsController.js"></script>
