--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 	<!-- build:appcomponents js/appcomponents.js -->
 	<script type="text/javascript" src="app/app.js"></script>
 	<script type="text/javascript" src="app/config.js"></script>
-	<script type="text/javascript" src="app/components/services/concentrationGame.service.js"></script>
+	<script type="text/javascript" src="app/components/services/ConcentrationGame.service.js"></script>
+	<script type="text/javascript" src="app/components/directives/mainTitle.directive.js"></script>
 	<!-- endbuild -->
 
 	<!-- Application sections -->
